bzip2ida/c3/sendMTFValues
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2269:6: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v271 = 0LL; 
     ^ ~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2270:44: error: use of undeclared identifier 'xmmword_41B1F0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B1F0); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2273:6: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v277 = 0LL; 
     ^ ~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2275:43: error: use of undeclared identifier 'xmmword_41B1E0'
v279 = _mm_load_si128( ( const __m128i *)&xmmword_41B1E0); 
                                          ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2277:6: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v281 = 0LL; 
     ^ ~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2324:6: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v271 = 0LL; 
     ^ ~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/compress.c:2325:44: error: use of undeclared identifier 'xmmword_41B1F0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B1F0); 
                                           ^
7 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/sendMTFValues/src/obj/compress.o] Error 1
